@@ -7,6 +7,7 @@ from sqlalchemy import exc as sa_exc
 from testlib import *
 from testlib.testing import eq_
 from orm import _base
+import gc
 
 # global for pickling tests
 MyTest = None
@@ -102,7 +103,23 @@ class AttributesTest(_base.ORMTest):
         self.assert_(len(o4.mt2) == 1)
         self.assert_(o4.mt2[0].a == 'abcde')
         self.assert_(o4.mt2[0].b is None)
-
+    
+    def test_state_gc(self):
+        """test that InstanceState always has a dict, even after host object gc'ed."""
+        
+        class Foo(object):
+            pass
+        
+        attributes.register_class(Foo)
+        f = Foo()
+        state = attributes.instance_state(f)
+        f.bar = "foo"
+        assert state.dict == {'bar':'foo', state.manager.STATE_ATTR:state}
+        del f
+        gc.collect()
+        assert state.obj() is None
+        assert state.dict == {}
+        
     def test_deferred(self):
         class Foo(object):pass
 
